# plugwise_usb-beta

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  README.md  hacs.json  pyproject.toml  requirements_commit.txt  requirements_test.txt
.devcontainer/: devcontainer.json
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/actions/restore-venv/: action.yml
.github/workflows/: hassfest.yaml  test.yml  validate.yaml
custom_components/plugwise_usb/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  event.py  manifest.json  models.py  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  util.py
custom_components/plugwise_usb/translations/: en.json  nl.json
scripts/: ci-core-testing.sh  core-testing.sh  local-testing.sh  python-venv.sh  setup.sh  setup_test.sh  tests_and_coverage.sh
src/custom_components/plugwise_usb/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  switch.py
src/custom_components/plugwise_usb/translations/: en.json  nl.json
tests/: __init__.py  conftest.py  ruff.toml  test_config_flow.py
tests/components/: conftest.py  test_config_flow.py
tests/components/plugwise_usb/: conftest.py  test_config_flow.py
